--- a/configs/configs.json
+++ b/configs/configs.json
@@ -9,7 +9,7 @@
     "jobs_titles_created_tags":".c-jobListView__passedDays",
     "company_location_tags":"li.c-jobListView__metaItem i.c-icon--place + span",
     "company_name_tags":"h2.c-companyHeader__name",
-    "job_category_tags":"li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('دسته‌بندی شغلی')) span.black").get_text(strip=True) if soup2.select_one("li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('دسته‌بندی شغلی')) span.black",
-    "cooperation_type_tags":"li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('نوع همکاری')) span.black").get_text(strip=True) if soup2.select_one("li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('نوع همکاری')) span.black",
+    "job_category_tags":"li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('دسته‌بندی شغلی')) span.black",
+    "cooperation_type_tags":"li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('نوع همکاری')) span.black",
     "salary_tags":"li.c-infoBox__item:has(h4.c-infoBox__itemTitle:contains('حقوق')) span.black"
 }
